@@ -78,6 +78,7 @@ export("+.section",
        mapImage,
        mapLines,
        mapLocator,
+       mapLongitudeLatitudeXY,
        mapMeridians,
        mapPlot,
        mapPoints,
